--- a/storefront.css
+++ b/storefront.css
@@ -355,6 +355,10 @@ html#ecwid_html body#ecwid_body .ec-size .ec-store .details-product-purchase__pl
     background-color: var(--tg-theme-button-color);
 }
 
+.ec-size .ec-store .label--highlight {
+    background-color: var(--tg-theme-button-color);
+}
+
 .ec-size .ec-store .label--notice::after,
 .ec-size .ec-store .label--notice::before {
     border-color: var(--tg-theme-button-color);
@@ -391,10 +395,13 @@ button.ecwid-search-widget__btn {
 /* --------------------------------------------- */
 
 .ec-minicart.ec-minicart--pill .ec-minicart.ec-minicart--rect {
-    border: solid 1px var(--tg-theme-button-color);
+    background: var(--tg-theme-bg-color);
+    border: 2px solid var(--tg-theme-button-color);
+    color: var(--tg-theme-text-color);
 }
 
 .search-panel .text-field {
-    background: var(--tg-theme-button-color);
+    background: var(--tg-theme-bg-color);
     border: 2px solid var(--tg-theme-button-color);
+    color: var(--tg-theme-text-color);
 }
